--- a/Textos/CSS/Syle_8.css
+++ b/Textos/CSS/Syle_8.css
@@ -1,6 +1,48 @@
 
-    body{
+@import url('https://fonts.googleapis.com/css?family=Calligraffitti|Crete+Round|Open+Sans|Permanent+Marker');
+
+@import url('https://fonts.googleapis.com/css?family=Henny+Penny');
+
+
+   body{
         background-color: #EECCAA;
     }
     
- 
+    h1{
+        font-size: 3rem;
+        letter-spacing: 1.5rem;
+        text-align: center;
+        text-transform: uppercase;
+        font-family: 'Henny Penny', 
+        cursive;
+    }
+
+    p.intro {
+        margin-left: 30%;
+        margin-right: 30%;
+        font-family: 'Calligraffitti', 
+        cursive;
+        
+        line-height: 200%;
+        text-align: justify;
+    }
+
+    p.latin{
+        margin: 0;
+        font-family: "Permanent Marker",
+        cursive;
+        font-size: 2.5rem;
+    }
+
+    p.español{
+        margin: 0 0 3rem;
+        color: white;
+        font-family: "Open Sans",
+        sans-serif;
+        font-size: 3.5rem;
+        letter-spacing: 1px;
+        text-align: right;
+       
+    }
+    
+    
